Change operationId of register in UserController
